Results in dropdown should all be forced to be on their own line to prevent wrapping

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -244,6 +244,8 @@
   padding: 0;
 }
 .chzn-container .chzn-results li {
+  float: left; 
+  clear: left;
   display: none;
   line-height: 15px;
   padding: 5px 6px;
